Fix squashed FloatingContact menu caused by restrictive CSS max-width

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
   max-width: 100%;
 }
 
